<resources>
    <string name="app_name">Square</string>
    <string name="start">开始</string>
    <string name="mode">模式</string>
    <string name="single">人机</string>
    <string name="two_player">对战</string>
    <string name="size">大小</string>
    <string name="four">肆</string>
    <string name="five">伍</string>
    <string name="six">陆</string>
    <string name="seven">柒</string>
    <string name="eight">捌</string>
    <string name="rival_not_chosen">还没选择对手哦</string>
    <string name="level_not_chosen">还没选择难度哦</string>
    <string name="return_to_main">返回</string>
    <string name="refresh">重来</string>
    <string name="rival">电脑</string>
    <string name="title_activity_choose_or_create_player">ChooseOrCreatePlayer</string>
    <string name="choose_player_one">玩家一</string>
    <string name="choose_player_two">玩家二</string>
    <string name="ranking_com">人机对战</string>
    <string name="ranking_man">本地对战</string>
    <string name="edit_name">取个名字吧~</string>
    <string name="done">确定</string>
    <string name="choose_avatar">请选择头像</string>
    <string name="weibosdk_demo_share_text_template">weibo1</string>
    <string name="weibosdk_demo_app_url">https://github.com/mobileresearch/weibo_android_sdk/blob/master/WeiboSDKDemo.apk</string>
    <string name="weibosdk_demo_share_webpage_template">【%1$s】（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_webpage_demo">XXX 新闻</string>
    <string name="weibosdk_demo_share_music_demo">XXX 音乐</string>
    <string name="weibosdk_demo_share_video_demo">XXX 视频</string>
    <string name="weibosdk_demo_share_voice_demo">XXX 声音</string>
    <string name="weibosdk_demo_share_music_template">我正在听 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_video_template">我正在看 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_voice_template">我分享了 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="choose_level">选择难度</string>
    <string name="vs">vs</string>
    <string name="win">你赢啦！</string>
    <string name="lose">你失败了！</string>
    <string name="game_rule">游戏规则</string>
    <string name="rules_one">1.游戏可以选择两个模式，人机对战或者本地双人游戏。</string>
    <string name="rules_two">2.两个玩家轮流连接画布中的两个点，只可以连接上下左右四个方向的点，不可斜向连接或跨点连接。</string>
    <string name="rules_three">3.每个方块的最后一条边被哪一个玩家连接，则该玩家占领该方块，并且获得额外一笔的资格。</string>
    <string name="rules_four">4.当所有方块都被连接后，占领方块多的一方获胜。</string>
    <string name="about">关于</string>
    <string name="brief">游戏开发简介</string>
    <string name="about_game">本游戏由黄鹛、李亚共同开发</string>
    <string name="about_developer">游戏进行逻辑由黄鹛开发，游戏附加功能由李亚开发</string>
    <string name="about_designer">游戏界面由李亚设计</string>
    <string name="about_supporter">感谢对本游戏的大力支持</string>
    <string name="easy">简单</string>
    <string name="normal">一般</string>
    <string name="hard">困难</string>
</resources>
